src/objects/TR1__Job__c.object
<CustomObject>
    <fields>
        <fullName>Minimum_Annual_Salary__c</fullName>
        <label>Minimum Annual Salary</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Regional_Salary_Scales__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>M1 - £27,000</fullName>
                </value>
                <value>
                    <fullName>M2 - £28,408</fullName>
                </value>
                <value>
                    <fullName>M3 - £29,889</fullName>
                </value>
                <value>
                    <fullName>M4 - £31,446</fullName>
                </value>
                <value>
                    <fullName>M5 - £33,865</fullName>
                </value>
                <value>
                    <fullName>M6 - £36,387</fullName>
                </value>
                <value>
                    <fullName>UPS1 - £41,497</fullName>
                </value>
                <value>
                    <fullName>UPS2 - £43,536</fullName>
                </value>
                <value>
                    <fullName>UPS3 - £45,000</fullName>
                </value>
                <value>
                    <fullName>UQ1 - £19,893</fullName>
                </value>
                <value>
                    <fullName>UQ2 - £21,731</fullName>
                </value>
                <value>
                    <fullName>UQ3 - £23,571</fullName>
                </value>
                <value>
                    <fullName>UQ4 - £25,410</fullName>
                </value>
                <value>
                    <fullName>UQ5 - £27,249</fullName>
                </value>
                <value>
                    <fullName>UQ6 - £29,088</fullName>
                </value>
                <value>
                    <fullName>M1 - £25,117</fullName>
                </value>
                <value>
                    <fullName>M2 - £26,674</fullName>
                </value>
                <value>
                    <fullName>M3 - £28,325</fullName>
                </value>
                <value>
                    <fullName>M4 - £30,080</fullName>
                </value>
                <value>
                    <fullName>M5 - £32,630</fullName>
                </value>
                <value>
                    <fullName>M6 - £35,116</fullName>
                </value>
                <value>
                    <fullName>UPS1 - £37,599</fullName>
                </value>
                <value>
                    <fullName>UPS2 - £38,991</fullName>
                </value>
                <value>
                    <fullName>UPS3 - £40,433</fullName>
                </value>
                <value>
                    <fullName>UQ1 - £18,789</fullName>
                </value>
                <value>
                    <fullName>UQ2 - £20,629</fullName>
                </value>
                <value>
                    <fullName>UQ3 - £22,470</fullName>
                </value>
                <value>
                    <fullName>UQ4 - £24,311</fullName>
                </value>
                <value>
                    <fullName>UQ5 - £26,150</fullName>
                </value>
                <value>
                    <fullName>UQ6 - £27,992</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monday_Extra_Duties__c</fullName>
        <label>Monday Extra Duties</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monday_Shift__c</fullName>
        <label>Monday Shift</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Full Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monday_s_Shift__c</fullName>
        <label>Monday&apos;s Shift</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Full Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Office_Name__c</fullName>
        <formula>Branch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Office Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Old Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Old_Status__c</fullName>
        <label>Old Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outstanding_pipeline__c</fullName>
        <formula>IF( ISPICKVAL( TR1__Status__c , &apos;Open&apos;), 
Vacancy_Schedule_Count__c  * if( TEXT(Shift__c) ==&apos;Full Day&apos;,8,4) *  TR1__Maximum_Bill_Rate__c ,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Post_To_LogicMelon__c</fullName>
        <formula>HYPERLINK(&quot;/apex/PostToLogicMelon?id=&quot;+Id, IMAGE(&quot;/resource/Post_To_LogicMelon&quot;, &quot;Post to LogicMelon&quot; , 25 , 165 ))</formula>
        <label>.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualifications__c</fullName>
        <label>Qualifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Postgraduate Diploma of Education (secondary)</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Primary Education</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Education (Primary)</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Education/Bachelor of Science (Secondary)</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Arts / Bachelor of Education</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Early Childhood Education</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Health, Sport and Physical Education</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Science and Education in Secondary Teaching</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Arts/Education</fullName>
                </value>
                <value>
                    <fullName>Masters of Teaching Secondary (Science and Middle years)</fullName>
                </value>
                <value>
                    <fullName>Graduate Diploma of Secondary Education</fullName>
                </value>
                <value>
                    <fullName>Graduate Diploma in Secondary Teaching</fullName>
                </value>
                <value>
                    <fullName>Graduate Diploma of Education (Primary)</fullName>
                </value>
                <value>
                    <fullName>Graduate Diploma of Teaching</fullName>
                </value>
                <value>
                    <fullName>Graduate Diploma of Early Childhood Education</fullName>
                </value>
                <value>
                    <fullName>Graduate Diploma of Learning and Teaching</fullName>
                </value>
                <value>
                    <fullName>Masters of Teaching</fullName>
                </value>
                <value>
                    <fullName>Master of Education</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Education (Special Education)</fullName>
                </value>
                <value>
                    <fullName>BA with QTS</fullName>
                </value>
                <value>
                    <fullName>BSC with QTS</fullName>
                </value>
                <value>
                    <fullName>BED with QTS</fullName>
                </value>
                <value>
                    <fullName>PGCE</fullName>
                </value>
                <value>
                    <fullName>MED with QTS</fullName>
                </value>
                <value>
                    <fullName>SCITT</fullName>
                </value>
                <value>
                    <fullName>ITT with QTS</fullName>
                </value>
                <value>
                    <fullName>NQT awaiting QTS</fullName>
                </value>
                <value>
                    <fullName>Trainee teacher no QTS</fullName>
                </value>
                <value>
                    <fullName>NQT with QTS</fullName>
                </value>
                <value>
                    <fullName>GTP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Vacancy__c</fullName>
        <label>Reason for Vacancy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cover</fullName>
                </value>
                <value>
                    <fullName>Covering EE LT</fullName>
                </value>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Maternity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Resignation</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>Sickness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Salary_Scales__c</fullName>
        <label>Regional Scales</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sector1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Inner</fullName>
                </value>
                <value>
                    <fullName>Outer</fullName>
                </value>
                <value>
                    <fullName>Fringe</fullName>
                </value>
                <value>
                    <fullName>Rest of England</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reports_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reports To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Vacancies (Reports To)</relationshipLabel>
        <relationshipName>Vacancies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SEN_Additional_Experience__c</fullName>
        <label>SEN Skills, Quals and Training</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ADHD Awareness</fullName>
                </value>
                <value>
                    <fullName>Art Therapy</fullName>
                </value>
                <value>
                    <fullName>Autism Awareness</fullName>
                </value>
                <value>
                    <fullName>Behaviour Mentor &amp; Tuition Training</fullName>
                </value>
                <value>
                    <fullName>BSL Level 1-3</fullName>
                </value>
                <value>
                    <fullName>Bullying Support Training</fullName>
                </value>
                <value>
                    <fullName>Disability Sports Coaching Award</fullName>
                </value>
                <value>
                    <fullName>Drug Awareness Training</fullName>
                </value>
                <value>
                    <fullName>Dyslexia Support Training</fullName>
                </value>
                <value>
                    <fullName>EAL Specialist</fullName>
                </value>
                <value>
                    <fullName>Eating Disorder Awareness</fullName>
                </value>
                <value>
                    <fullName>Emergency First Aid</fullName>
                </value>
                <value>
                    <fullName>Epilepsy Training</fullName>
                </value>
                <value>
                    <fullName>Jolly Phonics</fullName>
                </value>
                <value>
                    <fullName>Makaton</fullName>
                </value>
                <value>
                    <fullName>Moving and Handling</fullName>
                </value>
                <value>
                    <fullName>Music Therapy</fullName>
                </value>
                <value>
                    <fullName>PECS</fullName>
                    <isActive>false</isActive>
                    <label>PECS</label>
                </value>
                <value>
                    <fullName>Phonics Trained</fullName>
                </value>
                <value>
                    <fullName>Physical Disabilities</fullName>
                </value>
                <value>
                    <fullName>Safeguarding</fullName>
                </value>
                <value>
                    <fullName>Safe Handling &amp; Administration of Medicine</fullName>
                </value>
                <value>
                    <fullName>Speech and Language Trained</fullName>
                </value>
                <value>
                    <fullName>Suspected Physical &amp; Mental Abuse Awareness</fullName>
                </value>
                <value>
                    <fullName>Team Teach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SEN_Experience__c</fullName>
        <label>SEN Experience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ADHD</fullName>
                </value>
                <value>
                    <fullName>ASD</fullName>
                </value>
                <value>
                    <fullName>Aspergers</fullName>
                </value>
                <value>
                    <fullName>AUTISM</fullName>
                    <isActive>false</isActive>
                    <label>AUTISM</label>
                </value>
                <value>
                    <fullName>BSL</fullName>
                    <isActive>false</isActive>
                    <label>BSL</label>
                </value>
                <value>
                    <fullName>Downs Syndrome Experience</fullName>
                </value>
                <value>
                    <fullName>DYSLEXIA</fullName>
                </value>
                <value>
                    <fullName>EAL/ EFL</fullName>
                </value>
                <value>
                    <fullName>EBD</fullName>
                </value>
                <value>
                    <fullName>Epilepsy Training</fullName>
                    <isActive>false</isActive>
                    <label>Epilepsy Training</label>
                </value>
                <value>
                    <fullName>Gifted &amp;Talented (G&amp;T)</fullName>
                </value>
                <value>
                    <fullName>HAPS</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>Makaton</fullName>
                    <isActive>false</isActive>
                    <label>Makaton</label>
                </value>
                <value>
                    <fullName>Mappa</fullName>
                    <isActive>false</isActive>
                    <label>Mappa</label>
                </value>
                <value>
                    <fullName>MLD</fullName>
                </value>
                <value>
                    <fullName>Moving &amp;Handling Training</fullName>
                    <isActive>false</isActive>
                    <label>Moving &amp;Handling Training</label>
                </value>
                <value>
                    <fullName>Physical Disabilities</fullName>
                    <isActive>false</isActive>
                    <label>Physical Disabilities</label>
                </value>
                <value>
                    <fullName>PMLD</fullName>
                </value>
                <value>
                    <fullName>PRU/Centre of Education</fullName>
                </value>
                <value>
                    <fullName>SEMH</fullName>
                </value>
                <value>
                    <fullName>SENCO</fullName>
                </value>
                <value>
                    <fullName>SEN Mainstream</fullName>
                </value>
                <value>
                    <fullName>Sign Language Experience</fullName>
                </value>
                <value>
                    <fullName>SLD</fullName>
                </value>
                <value>
                    <fullName>Speech and Language</fullName>
                </value>
                <value>
                    <fullName>Team Teach</fullName>
                    <isActive>false</isActive>
                    <label>Team Teach</label>
                </value>
                <value>
                    <fullName>VI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Saturday_Extra_Duties_Hours__c</fullName>
        <label>Saturday Extra Duties Hours</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Saturday_Shift__c</fullName>
        <label>Saturday Shift</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Full Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Saturday_s_Shift__c</fullName>
        <label>Saturday&apos;s Shift</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Full Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Conversion_Fee__c</fullName>
        <label>School Conversion Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>School_Recruitment_Fee__c</fullName>
        <label>School Recruitment Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>School_Type__c</fullName>
        <label>School Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Children&apos;s Centre</fullName>
                </value>
                <value>
                    <fullName>College (6th)</fullName>
                </value>
                <value>
                    <fullName>EBD</fullName>
                    <isActive>false</isActive>
                    <label>EBD</label>
                </value>
                <value>
                    <fullName>First</fullName>
                    <isActive>false</isActive>
                    <label>First</label>
                </value>
                <value>
                    <fullName>Further Education</fullName>
                </value>
                <value>
                    <fullName>High, Special Needs</fullName>
                    <isActive>false</isActive>
                    <label>High, Special Needs</label>
                </value>
                <value>
                    <fullName>High, Special Needs, MLD, SLD, PMLD</fullName>
                    <isActive>false</isActive>
                    <label>High, Special Needs, MLD, SLD, PMLD</label>
                </value>
                <value>
                    <fullName>High, Special Needs, SEN - HI</fullName>
                    <isActive>false</isActive>
                    <label>High, Special Needs, SEN - HI</label>
                </value>
                <value>
                    <fullName>High, Special Needs, SLD</fullName>
                    <isActive>false</isActive>
                    <label>High, Special Needs, SLD</label>
                </value>
                <value>
                    <fullName>HMP Prison</fullName>
                </value>
                <value>
                    <fullName>Infant</fullName>
                </value>
                <value>
                    <fullName>Infant, Junior, Primary</fullName>
                    <isActive>false</isActive>
                    <label>Infant, Junior, Primary</label>
                </value>
                <value>
                    <fullName>Infant, Junior, Primary, First</fullName>
                    <isActive>false</isActive>
                    <label>Infant, Junior, Primary, First</label>
                </value>
                <value>
                    <fullName>Infant, Primary</fullName>
                    <isActive>false</isActive>
                    <label>Infant, Primary</label>
                </value>
                <value>
                    <fullName>Junior</fullName>
                </value>
                <value>
                    <fullName>Junior, Primary</fullName>
                    <isActive>false</isActive>
                    <label>Junior, Primary</label>
                </value>
                <value>
                    <fullName>Junior, Primary, First</fullName>
                    <isActive>false</isActive>
                    <label>Junior, Primary, First</label>
                </value>
                <value>
                    <fullName>Nursery</fullName>
                </value>
                <value>
                    <fullName>Nursery, Infant, Junior, Primary</fullName>
                    <isActive>false</isActive>
                    <label>Nursery, Infant, Junior, Primary</label>
                </value>
                <value>
                    <fullName>Nursery, Infant, Junior, Primary, First</fullName>
                    <isActive>false</isActive>
                    <label>Nursery, Infant, Junior, Primary, First</label>
                </value>
                <value>
                    <fullName>Nursery, Infant, Primary</fullName>
                    <isActive>false</isActive>
                    <label>Nursery, Infant, Primary</label>
                </value>
                <value>
                    <fullName>Nursery, Primary</fullName>
                    <isActive>false</isActive>
                    <label>Nursery, Primary</label>
                </value>
                <value>
                    <fullName>Overseas Client</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Primary, First</fullName>
                    <isActive>false</isActive>
                    <label>Primary, First</label>
                </value>
                <value>
                    <fullName>Primary, Middle, High</fullName>
                    <isActive>false</isActive>
                    <label>Primary, Middle, High</label>
                </value>
                <value>
                    <fullName>Primary, Upper Middle</fullName>
                    <isActive>false</isActive>
                    <label>Primary, Upper Middle</label>
                </value>
                <value>
                    <fullName>Primary, Upper Middle, Lower Middle, High</fullName>
                    <isActive>false</isActive>
                    <label>Primary, Upper Middle, Lower Middle, High</label>
                </value>
                <value>
                    <fullName>Private Nursery</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sector1__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Children&apos;s Centre</fullName>
                </value>
                <value>
                    <fullName>College (6th)</fullName>
                </value>
                <value>
                    <fullName>Further Education</fullName>
                </value>
                <value>
                    <fullName>HMP Prison</fullName>
                </value>
                <value>
                    <fullName>Infant</fullName>
                </value>
                <value>
                    <fullName>Junior</fullName>
                </value>
                <value>
                    <fullName>Nursery</fullName>
                </value>
                <value>
                    <fullName>Overseas Client</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Private Nursery</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Special Needs</fullName>
                </value>
                <value>
                    <fullName>Tech College</fullName>
                </value>
                <value>
                    <fullName>Through School</fullName>
                </value>
                <value>
                    <fullName>Virtual School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shift__c</fullName>
        <label>Pay Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skills_Training_Experience__c</fullName>
        <label>Skills Training Experience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Careers Advisor</fullName>
                </value>
                <value>
                    <fullName>Musician</fullName>
                </value>
                <value>
                    <fullName>Sports Coach</fullName>
                </value>
                <value>
                    <fullName>First Aid</fullName>
                </value>
                <value>
                    <fullName>Smart/Whiteboard</fullName>
                </value>
                <value>
                    <fullName>Phonics</fullName>
                </value>
                <value>
                    <fullName>Welsh Medium</fullName>
                </value>
                <value>
                    <fullName>Reading Recovery</fullName>
                </value>
                <value>
                    <fullName>Numeracy specialist</fullName>
                </value>
                <value>
                    <fullName>Literacy specialist</fullName>
                </value>
                <value>
                    <fullName>EAL specialist</fullName>
                </value>
                <value>
                    <fullName>Invigilator</fullName>
                </value>
                <value>
                    <fullName>BSL</fullName>
                    <isActive>false</isActive>
                    <label>BSL</label>
                </value>
                <value>
                    <fullName>Makaton</fullName>
                    <isActive>false</isActive>
                    <label>Makaton</label>
                </value>
                <value>
                    <fullName>Moving and Handling</fullName>
                    <isActive>false</isActive>
                    <label>Moving and Handling</label>
                </value>
                <value>
                    <fullName>Team Teach</fullName>
                    <isActive>false</isActive>
                    <label>Team Teach</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>